@@ -25,6 +25,8 @@ This release includes:
   and considering the ec.message.validationErrors list for storing error
   details in session between redirects, and changed entity and service
   validation to add ValidationErrors instead of plain error Strings
+- Added datasource.@startup-add-missing option; set to true to check tables
+  for all entities in the database on startup and create missing ones
 
 
 Non-backward-compatible changes:
